--- a/dashboard/templates/jobs/log_detail.html
+++ b/dashboard/templates/jobs/log_detail.html
@@ -4,12 +4,7 @@
 {% block extrascript %}
 <link rel="stylesheet" type="text/css" href="/static/diff2html/dist/diff2html.css">
 <style type="text/css">
-    .list-group-item-text{
-        max-height: 300px;
-        margin-bottom: 10px;
-        overflow-y:scroll;
-        -webkit-overflow-scrolling: touch;
-    }
+    .list-group-item-text{max-height:300px;margin-bottom:10px;overflow-y:scroll;-webkit-overflow-scrolling:touch}
 </style>
 <script type="text/javascript" src="/static/diff2html/dist/diff2html.js"></script>
 <script type="text/javascript" src="/static/diff2html/dist/diff2html-ui.js"></script>
