--- a/dashboard/templates/packages/package_view.html
+++ b/dashboard/templates/packages/package_view.html
@@ -120,283 +120,6 @@
 </div>
 
 <script>
-  function csrfSafeMethod(a) {
-    return /^(GET|HEAD|OPTIONS|TRACE)$/.test(a)
-  }
-
-  function ajax_tabular() {
-    return $.ajax({
-      beforeSend: function (a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-tabular-data' %}",
-      data: {
-        package: $("#select-package-name").val()
-      },
-      success: function (a) {
-        waitSpinner.hide(), $("#div-table-area").html(a)
-      }
-    })
-  }
-
-  function ajax_graph() {
-    var e = $("#select-package-name").val();
-    return $.ajax({
-      beforeSend: function (a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#div-locale-graph").hide(), $("#button-hide-locale-graph").hide(), $("#select-lang-name").selectpicker("hide"), $("#select-lang-name").selectpicker("val", "Select Language"), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-graph-data' %}",
-      data: {
-        package: e
-      },
-      dataType: "json",
-      success: function (t) {
-        waitSpinner.hide();
-        var s = t.pkg_desc,
-          n = t.graph_data,
-          r = t.ticks,
-          i = [];
-        for (version in n) n.hasOwnProperty(version) && i.push({
-          label: version,
-          data: n[version]
-        });
-        var o = {
-          series: {
-            lines: {
-              show: !0,
-              lineWidth: .5
-            },
-            points: {
-              radius: 4,
-              fill: !0,
-              show: !0
-            }
-          },
-          xaxis: {
-            axisLabel: "Languages",
-            axisLabelUseCanvas: !0,
-            axisLabelFontSizePixels: 12,
-            axisLabelFontFamily: "Verdana, Arial",
-            axisLabelPadding: 10,
-            ticks: r
-          },
-          yaxis: {
-            axisLabel: "Translation",
-            axisLabelUseCanvas: !0,
-            axisLabelFontSizePixels: 12,
-            axisLabelFontFamily: "Verdana, Arial",
-            axisLabelPadding: 3,
-            tickFormatter: function (a, e) {
-              return a + "%"
-            },
-            minTickSize: 1,
-            tickDecimals: 2
-          },
-          legend: {
-            show: !0,
-            noColumns: 0,
-            labelBoxBorderColor: "Grey",
-            position: "ne"
-          },
-          grid: {
-            margin: 10,
-            hoverable: !0,
-            borderWidth: 2,
-            backgroundColor: {
-              colors: ["#ffffff", "#EDF5FF"]
-            }
-          },
-          tooltip: {
-            show: !0,
-            content: "%s | %y translated"
-          }
-        };
-        i.length > 0 && ($("#div-locale-graph").hide(), $("#div-graph-area").show(), $.plot($("#div-graph-area"), i, o), $("#span-graph-info").html("Translation status of " + e + " for " + i.length + " branch(es) in " + r.length + " language(s)"), $("#span-package-desc").html(s), $("#div-graph-disclaimer").html(a), $("#select-lang-name").selectpicker("show"))
-      }
-    })
-  }
-
-  function ajax_locale() {
-    var e = $("#select-package-name").val(),
-      t = $("#select-lang-name").val();
-    return $.ajax({
-      beforeSend: function (a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-graph-data' %}",
-      data: {
-        package: e,
-        locale: t
-      },
-      dataType: "json",
-      success: function (s) {
-        waitSpinner.hide();
-        var n = s.pkg_desc,
-          r = s.graph_data,
-          i = s.ticks,
-          o = [{
-            label: "Translation Progress",
-            data: r
-          }],
-          l = {
-            series: {
-              bars: {
-                show: !0
-              }
-            },
-            bars: {
-              align: "center",
-              barWidth: .5 * i.length / 10,
-              horizontal: !0
-            },
-            xaxis: {
-              axisLabel: "Translation Percentage",
-              axisLabelUseCanvas: !0,
-              axisLabelFontSizePixels: 12,
-              axisLabelFontFamily: "Verdana, Arial",
-              axisLabelPadding: 10,
-              max: 110,
-              tickFormatter: function (a, e) {
-                return a + "%"
-              }
-            },
-            yaxis: {
-              axisLabel: "Branches",
-              axisLabelUseCanvas: !0,
-              axisLabelFontSizePixels: 12,
-              axisLabelFontFamily: "Verdana, Arial",
-              axisLabelPadding: 3,
-              ticks: i
-            },
-            legend: {
-              noColumns: 0,
-              labelBoxBorderColor: "#000000",
-              position: "ne"
-            },
-            grid: {
-              hoverable: !0,
-              borderWidth: 2,
-              backgroundColor: {
-                colors: ["#ffffff", "#EDF5FF"]
-              }
-            },
-            tooltip: {
-              show: !0,
-              content: "%y | %x translated"
-            }
-          };
-        i.length > 0 && ($("#div-graph-area").hide(), $("#div-locale-graph").show(), $.plot($("#div-locale-graph"), o, l), $("#span-graph-info").html("Translation status of " + t + " for " + i.length + " branch(es) in " + e + " locale"), $("#span-package-desc").html(n), $("#div-graph-disclaimer").html(a), $("#button-hide-locale-graph").show())
-      }
-    })
-  }
-
-  function refresh_package() {
-    return $.ajax({
-      beforeSend: function (a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#span-refresh-progress").html("<span class='spinner spinner-xs spinner-inline'></span>")
-      },
-      type: "POST",
-      url: "{% url 'ajax-refresh-package' %}",
-      data: {
-        package: "{{ package_name }}",
-        task: $("#sync-package-identifier").val()
-      },
-      success: function (a) {
-        $("#span-refresh-progress").html("<span class='pficon pficon-ok'></span>"), package_details(), load_table(), branch_mapping()
-      },
-      error: function (a, e, t) {
-        $("#span-refresh-progress").html("<span class='pficon pficon-warning-triangle-o'></span>"), $("#span-alerts").html(a.responseText)
-      }
-    })
-  }
-
-  function branch_mapping() {
-    $.ajax({
-      beforeSend: function (a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#link-create-branch-mapping").attr("disabled", !0), $("#span-rebuild-progress").html("<span class='spinner spinner-xs spinner-inline'></span>")
-      },
-      type: "POST",
-      url: "{% url 'ajax-refresh-package' %}",
-      data: {
-        package: "{{ package_name }}",
-        task: $("#map-branches-identifier").val()
-      },
-      success: function (a) {
-        $("#span-rebuild-progress").html("<span class='pficon pficon-ok' style='color:green'></span>"), $("#link-create-branch-mapping").attr("disabled", !1), setTimeout(function () {
-          $("#div-branch-mapping").html(a)
-        }, 1e3)
-      },
-      error: function (a, e, t) {
-        $("#span-rebuild-progress").html("<span class='pficon pficon-warning-triangle-o'></span>"), $("#link-create-branch-mapping").attr("disabled", !1), $("#span-alerts").html(a.responseText)
-      }
-    })
-  }
-
-  function stats_diff() {
-    $.ajax({
-      beforeSend: function (a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#link-create-stats-diff").attr("disabled", !0), $("#span-rebuild-progress").html("<span class='spinner spinner-xs spinner-inline'></span>")
-      },
-      type: "POST",
-      url: "{% url 'ajax-refresh-package' %}",
-      data: {
-        package: "{{ package_name }}",
-        task: $("#stats-diff-identifier").val()
-      },
-      success: function (a) {
-        $("#span-rebuild-progress").html("<span class='pficon pficon-ok'></span>"), $("#link-create-stats-diff").attr("disabled", !1), setTimeout(function () {
-          $("#div-stats-diff").html(a)
-        }, 1e3)
-      },
-      error: function (a, e, t) {
-        $("#span-rebuild-progress").html("<span class='pficon pficon-warning-triangle-o'></span>"), $("#link-create-stats-diff").attr("disabled", !1), $("#span-alerts").html(a.responseText)
-      }
-    })
-  }
-
-  function package_details() {
-    $.ajax({
-      beforeSend: function (a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}"))
-      },
-      type: "POST",
-      url: "{% url 'ajax-refresh-package' %}",
-      data: {
-        package: "{{ package_name }}",
-        task: "details"
-      },
-      success: function (a) {
-        $("#div-package-details").html(a)
-      }
-    })
-  }
-
-  function load_table() {
-    $("#button-graph").removeClass("active"), $("#button-tabular").addClass("active"), ajax_tabular(), $("#button-hide-locale-graph").hide(), $("#select-lang-name").selectpicker("hide"), $("#div-graph-group").hide(), $("#div-table-area").show()
-  }
-
-  $(document).ready(function () {
-    $("#button-tabular").addClass("active"), $("#div-graph-group").hide(), $("#div-locale-graph").hide(), $("#button-hide-locale-graph").hide(), $("#select-lang-name").selectpicker("hide"), $("#select-package-name").val("{{ package_name }}"), $("#span-alerts").html(""), $("#select-package-name").change(function (a) {
-      window.location.replace("/packages/view/" + $(this).val())
-    }), $("#button-graph").on('click', function () {
-      $("#button-tabular").removeClass("active"), $("#button-graph").addClass("active"), ajax_graph(), $("#div-table-area").hide(), $("#div-graph-group").show()
-    }), $("#button-tabular").on('click', function () {
-      load_table()
-    }), $("#link-sync-transplatform").on('click', function (a) {
-      return a.preventDefault(), refresh_package(), !1
-    }), $("#link-create-branch-mapping").on('click', function (a) {
-      return a.preventDefault(), branch_mapping(), !1
-    }), $("#link-create-stats-diff").on('click', function (a) {
-      return a.preventDefault(), stats_diff(), !1
-    }), $("#select-lang-name").change(function (a) {
-      ajax_locale()
-    }), $("#button-hide-locale-graph").on('click', function (a) {
-      return a.preventDefault(), $("#div-locale-graph").hide(), $("#select-lang-name").selectpicker("val", "Select Language"), $("#span-graph-info").html("&nbsp;"), $("#div-graph-area").show(), $(this).hide()
-    }), jQuery(".main-table").clone(!0).appendTo("#table-scroll").addClass("clone");
-    $('.selectpicker').selectpicker();
-  });
+  function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}function ajax_tabular(){return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitSpinner.show()},type:"POST",url:"{% url 'ajax-tabular-data' %}",data:{package:$("#select-package-name").val()},success:function(e){waitSpinner.hide(),$("#div-table-area").html(e)}})}function ajax_graph(){var o=$("#select-package-name").val();return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#div-locale-graph").hide(),$("#button-hide-locale-graph").hide(),$("#select-lang-name").selectpicker("hide"),$("#select-lang-name").selectpicker("val","Select Language"),waitSpinner.show()},type:"POST",url:"{% url 'ajax-graph-data' %}",data:{package:o},dataType:"json",success:function(e){waitSpinner.hide();var n=e.pkg_desc,s=e.graph_data,t=e.ticks,r=[];for(version in s)s.hasOwnProperty(version)&&r.push({label:version,data:s[version]});var i={series:{lines:{show:!0,lineWidth:.5},points:{radius:4,fill:!0,show:!0}},xaxis:{axisLabel:"Languages",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:10,ticks:t},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:3,tickFormatter:function(e,a){return e+"%"},minTickSize:1,tickDecimals:2},legend:{show:!0,noColumns:0,labelBoxBorderColor:"Grey",position:"ne"},grid:{margin:10,hoverable:!0,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:!0,content:"%s | %y translated"}};0<r.length&&($("#div-locale-graph").hide(),$("#div-graph-area").show(),$.plot($("#div-graph-area"),r,i),$("#span-graph-info").html("Translation status of "+o+" for "+r.length+" branch(es) in "+t.length+" language(s)"),$("#span-package-desc").html(n),$("#div-graph-disclaimer").html(a),$("#select-lang-name").selectpicker("show"))}})}function ajax_locale(){var o=$("#select-package-name").val(),l=$("#select-lang-name").val();return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitSpinner.show()},type:"POST",url:"{% url 'ajax-graph-data' %}",data:{package:o,locale:l},dataType:"json",success:function(e){waitSpinner.hide();var n=e.pkg_desc,s=e.graph_data,t=e.ticks,r=[{label:"Translation Progress",data:s}],i={series:{bars:{show:!0}},bars:{align:"center",barWidth:.5*t.length/10,horizontal:!0},xaxis:{axisLabel:"Translation Percentage",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:10,max:110,tickFormatter:function(e,a){return e+"%"}},yaxis:{axisLabel:"Branches",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:3,ticks:t},legend:{noColumns:0,labelBoxBorderColor:"#000000",position:"ne"},grid:{hoverable:!0,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:!0,content:"%y | %x translated"}};0<t.length&&($("#div-graph-area").hide(),$("#div-locale-graph").show(),$.plot($("#div-locale-graph"),r,i),$("#span-graph-info").html("Translation status of "+l+" for "+t.length+" branch(es) in "+o+" locale"),$("#span-package-desc").html(n),$("#div-graph-disclaimer").html(a),$("#button-hide-locale-graph").show())}})}function refresh_package(){return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#span-refresh-progress").html("<span class='spinner spinner-xs spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-refresh-package' %}",data:{package:"{{ package_name }}",task:$("#sync-package-identifier").val()},success:function(e){$("#span-refresh-progress").html("<span class='pficon pficon-ok'></span>"),package_details(),load_table(),branch_mapping()},error:function(e,a,n){$("#span-refresh-progress").html("<span class='pficon pficon-warning-triangle-o'></span>"),$("#span-alerts").html(e.responseText)}})}function branch_mapping(){$.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#link-create-branch-mapping").attr("disabled",!0),$("#span-rebuild-progress").html("<span class='spinner spinner-xs spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-refresh-package' %}",data:{package:"{{ package_name }}",task:$("#map-branches-identifier").val()},success:function(e){$("#span-rebuild-progress").html("<span class='pficon pficon-ok' style='color:green'></span>"),$("#link-create-branch-mapping").attr("disabled",!1),setTimeout(function(){$("#div-branch-mapping").html(e)},1e3)},error:function(e,a,n){$("#span-rebuild-progress").html("<span class='pficon pficon-warning-triangle-o'></span>"),$("#link-create-branch-mapping").attr("disabled",!1),$("#span-alerts").html(e.responseText)}})}function stats_diff(){$.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#link-create-stats-diff").attr("disabled",!0),$("#span-rebuild-progress").html("<span class='spinner spinner-xs spinner-inline'></span>")},type:"POST",url:"{% url 'ajax-refresh-package' %}",data:{package:"{{ package_name }}",task:$("#stats-diff-identifier").val()},success:function(e){$("#span-rebuild-progress").html("<span class='pficon pficon-ok'></span>"),$("#link-create-stats-diff").attr("disabled",!1),setTimeout(function(){$("#div-stats-diff").html(e)},1e3)},error:function(e,a,n){$("#span-rebuild-progress").html("<span class='pficon pficon-warning-triangle-o'></span>"),$("#link-create-stats-diff").attr("disabled",!1),$("#span-alerts").html(e.responseText)}})}function package_details(){$.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}"))},type:"POST",url:"{% url 'ajax-refresh-package' %}",data:{package:"{{ package_name }}",task:"details"},success:function(e){$("#div-package-details").html(e)}})}function load_table(){$("#button-graph").removeClass("active"),$("#button-tabular").addClass("active"),ajax_tabular(),$("#button-hide-locale-graph").hide(),$("#select-lang-name").selectpicker("hide"),$("#div-graph-group").hide(),$("#div-table-area").show()}$(document).ready(function(){$("#button-tabular").addClass("active"),$("#div-graph-group").hide(),$("#div-locale-graph").hide(),$("#button-hide-locale-graph").hide(),$("#select-lang-name").selectpicker("hide"),$("#select-package-name").val("{{ package_name }}"),$("#span-alerts").html(""),$("#select-package-name").change(function(e){window.location.replace("/packages/view/"+$(this).val())}),$("#button-graph").on("click",function(){$("#button-tabular").removeClass("active"),$("#button-graph").addClass("active"),ajax_graph(),$("#div-table-area").hide(),$("#div-graph-group").show()}),$("#button-tabular").on("click",function(){load_table()}),$("#link-sync-transplatform").on("click",function(e){return e.preventDefault(),refresh_package(),!1}),$("#link-create-branch-mapping").on("click",function(e){return e.preventDefault(),branch_mapping(),!1}),$("#link-create-stats-diff").on("click",function(e){return e.preventDefault(),stats_diff(),!1}),$("#select-lang-name").change(function(e){ajax_locale()}),$("#button-hide-locale-graph").on("click",function(e){return e.preventDefault(),$("#div-locale-graph").hide(),$("#select-lang-name").selectpicker("val","Select Language"),$("#span-graph-info").html("&nbsp;"),$("#div-graph-area").show(),$(this).hide()}),jQuery(".main-table").clone(!0).appendTo("#table-scroll").addClass("clone"),$(".selectpicker").selectpicker()});
 </script>
 {% endblock %}
