--- a/dashboard/templates/releases/release_view.html
+++ b/dashboard/templates/releases/release_view.html
@@ -70,151 +70,6 @@
 </div>
 
 <script>
-  var langWiseFlag = !1;
-
-  function getUrlVars() {
-    for (var e, a = [], n = window.location.href.slice(window.location.href.indexOf("?") + 1).split("&"), t = 0; t < n.length; t++) e = n[t].split("="), a.push(e[0]), a[e[0]] = e[1];
-    return a
-  }
-
-  function csrfSafeMethod(e) {
-    return /^(GET|HEAD|OPTIONS|TRACE)$/.test(e)
-  }
-
-  function ajax_combined() {
-    return $.ajax({
-      beforeSend: function (e, a) {
-        csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-release-graph' %}",
-      data: {
-        relbranch: $("#select-release-branch").val(),
-        combine: !0
-      },
-      success: function (e) {
-        waitSpinner.hide()
-        $("#releasegraph").html(e)
-        $("#span-graph-disclaimer").html("Percentage is calculated on messages. Accuracy largely depends upon branch mapping")
-        $("#span-legends").html("")
-      }
-    })
-  }
-
-  function ajax_detailed() {
-    return $.ajax({
-      beforeSend: function (e, a) {
-        csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-release-graph' %}",
-      data: {
-        relbranch: $("#select-release-branch").val(),
-        detail: !0
-      },
-      success: function (e) {
-        waitSpinner.hide()
-        $("#releasegraph").html(e)
-        $("#span-graph-disclaimer").html("Percentage is calculated on messages. Accuracy largely depends upon *branch mapping")
-        $("#span-legends").html('<span class="text-danger">0-30%</span> | <span class="text-warning">31-60% </span> | <span class="text-primary">61-90%</span> | <span class="text-success">91-100%</span>')
-      }
-    })
-  }
-
-  function labelFormatter(e, a) {
-    return "<div>" + Math.round(a.percent) + "%</div>"
-  }
-
-  function ajax_lang_wise() {
-    var r = $("#select-release-branch").val();
-    return $.ajax({
-      beforeSend: function (e, a) {
-        csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#showPercentage").html(""), $("#button-hide-locale-graph").hide(), $("#select-lang-name").selectpicker("hide"), $("#select-lang-name").empty().append("<option selected disabled>Select Language</option>").selectpicker("val", "Select Language"), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-release-graph' %}",
-      data: {
-        relbranch: r
-      },
-      success: function (e) {
-        waitSpinner.hide();
-        var a = e.graph_data,
-          n = e.select_options,
-          t = {
-            series: {
-              pie: {
-                show: !0,
-                label: {
-                  show: !0,
-                  formatter: labelFormatter
-                }
-              }
-            },
-            legend: {
-              show: !0,
-              noColumns: 2
-            },
-            grid: {
-              margin: 10,
-              hoverable: !0,
-              clickable: !0
-            }
-          };
-        $("#localegraph").hide(), $("#button-hide-locale-graph").hide(), $("#grapharea").show(), $.plot("#graphsubarea", a, t), $("#graphsubarea").bind("plothover", function (e, a, n) {
-          if (n) {
-            percent = parseFloat(n.series.percent).toFixed(2);
-            var t = [];
-            t.push("<hr/>&nbsp;&nbsp;", n.series.label, " - ", percent, "%&nbsp;&nbsp;<hr/>"), $("#showPercentage").html(t.join(""))
-          }
-        }), $.each(n, function (e, a) {
-          $("#select-lang-name").append($("<option>", {
-            value: a.value,
-            text: a.text
-          }))
-        }), $("#select-lang-name").selectpicker("refresh"), $("#select-lang-name").selectpicker("show"), $("#span-graph-disclaimer").html("Consolidated graph of all packages being tracked for " + r + " branch"), $("#span-legends").html(""), langWiseFlag = !0
-      }
-    })
-  }
-
-  function ajax_one_lang() {
-    var e = $("#select-release-branch").val(),
-      a = $("#select-lang-name").val();
-    return $.ajax({
-      beforeSend: function (e, a) {
-        csrfSafeMethod(a.type) || this.crossDomain || (csrftoken ? e.setRequestHeader("X-CSRFToken", csrftoken) : e.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), $("#showPercentage").html(""), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-release-graph' %}",
-      data: {
-        relbranch: e,
-        lang: a
-      },
-      success: function (e) {
-        waitSpinner.hide()
-        $("#grapharea").hide()
-        $("#localegraph").show()
-        $("#button-hide-locale-graph").show()
-        $("#localegraph").html(e)
-        $("#span-graph-disclaimer").html("Percentage is calculated on messages. Accuracy largely depends upon branch mapping")
-        $("#span-legends").html("")
-      }
-    })
-  }
-  $(document).ready(function () {
-    getWaitSpinner();
-    $("#button-combined").addClass("active"), $("#localegraph").hide(), $("#grapharea").hide(), $("#button-hide-locale-graph").hide(), $("#select-lang-name").selectpicker("hide"), $("#select-release-branch").val("{{ release_branch }}"), getUrlVars().locale && $("#select-lang-name").selectpicker("show") && $("#select-lang-name").val(getUrlVars().locale) && $("#select-lang-name").selectpicker("refresh") && $("#button-combined").removeClass("active") && $("#button-detailed").removeClass("active") && $("#button-lang-wise").addClass("active") && $("#releasegraph").hide() && ajax_one_lang(), $("#select-release-branch").change(function (e) {
-      window.location.replace("/releases/view/" + $(this).val())
-    }), $("#select-lang-name").change(function (e) {
-      ajax_one_lang()
-    }), $("#button-hide-locale-graph").on("click", function (e) {
-      return e.preventDefault(), $("#localegraph").hide(), $("#select-lang-name").selectpicker("val", "Select Language"), $("#grapharea").show(), $("#span-graph-disclaimer").html("Consolidated graph of all packages being tracked for " + $("#select-release-branch").val() + " branch. Accuracy largely depends upon branch mapping"), !langWiseFlag && ajax_lang_wise(), $(this).hide()
-    }), $("#button-combined").on("click", function () {
-      $("#button-detailed").removeClass("active"), $("#button-lang-wise").removeClass("active"), $("#button-combined").addClass("active"), $("#localegraph").hide(), $("#grapharea").hide(), $("#button-hide-locale-graph").hide(), $("#select-lang-name").selectpicker("hide"), $("#releasegraph").show(), ajax_combined()
-    }), $("#button-detailed").on("click", function () {
-      $("#button-combined").removeClass("active"), $("#button-lang-wise").removeClass("active"), $("#button-detailed").addClass("active"), $("#localegraph").hide(), $("#grapharea").hide(), $("#button-hide-locale-graph").hide(), $("#select-lang-name").selectpicker("hide"), $("#releasegraph").show(), ajax_detailed()
-    }), $("#button-lang-wise").on("click", function () {
-      $("#button-combined").removeClass("active"), $("#button-detailed").removeClass("active"), $("#button-lang-wise").addClass("active"), $("#releasegraph").hide(), ajax_lang_wise()
-    }), ajax_combined()
-  });
+  var langWiseFlag=!1;function getUrlVars(){for(var e,a=[],n=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),t=0;t<n.length;t++)e=n[t].split("="),a.push(e[0]),a[e[0]]=e[1];return a}function csrfSafeMethod(e){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(e)}function ajax_combined(){return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitSpinner.show()},type:"POST",url:"{% url 'ajax-release-graph' %}",data:{relbranch:$("#select-release-branch").val(),combine:!0},success:function(e){waitSpinner.hide(),$("#releasegraph").html(e),$("#span-graph-disclaimer").html("Percentage is calculated on messages. Accuracy largely depends upon branch mapping"),$("#span-legends").html("")}})}function ajax_detailed(){return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitSpinner.show()},type:"POST",url:"{% url 'ajax-release-graph' %}",data:{relbranch:$("#select-release-branch").val(),detail:!0},success:function(e){waitSpinner.hide(),$("#releasegraph").html(e),$("#span-graph-disclaimer").html("Percentage is calculated on messages. Accuracy largely depends upon *branch mapping"),$("#span-legends").html('<span class="text-danger">0-30%</span> | <span class="text-warning">31-60% </span> | <span class="text-primary">61-90%</span> | <span class="text-success">91-100%</span>')}})}function labelFormatter(e,a){return"<div>"+Math.round(a.percent)+"%</div>"}function ajax_lang_wise(){var s=$("#select-release-branch").val();return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#showPercentage").html(""),$("#button-hide-locale-graph").hide(),$("#select-lang-name").selectpicker("hide"),$("#select-lang-name").empty().append("<option selected disabled>Select Language</option>").selectpicker("val","Select Language"),waitSpinner.show()},type:"POST",url:"{% url 'ajax-release-graph' %}",data:{relbranch:s},success:function(e){waitSpinner.hide();var a=e.graph_data,n=e.select_options,t={series:{pie:{show:!0,label:{show:!0,formatter:labelFormatter}}},legend:{show:!0,noColumns:2},grid:{margin:10,hoverable:!0,clickable:!0}};$("#localegraph").hide(),$("#button-hide-locale-graph").hide(),$("#grapharea").show(),$.plot("#graphsubarea",a,t),$("#graphsubarea").bind("plothover",function(e,a,n){if(n){percent=parseFloat(n.series.percent).toFixed(2);var t=[];t.push("<hr/>&nbsp;&nbsp;",n.series.label," - ",percent,"%&nbsp;&nbsp;<hr/>"),$("#showPercentage").html(t.join(""))}}),$.each(n,function(e,a){$("#select-lang-name").append($("<option>",{value:a.value,text:a.text}))}),$("#select-lang-name").selectpicker("refresh"),$("#select-lang-name").selectpicker("show"),$("#span-graph-disclaimer").html("Consolidated graph of all packages being tracked for "+s+" branch"),$("#span-legends").html(""),langWiseFlag=!0}})}function ajax_one_lang(){var e=$("#select-release-branch").val(),a=$("#select-lang-name").val();return $.ajax({beforeSend:function(e,a){csrfSafeMethod(a.type)||this.crossDomain||(csrftoken?e.setRequestHeader("X-CSRFToken",csrftoken):e.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),$("#showPercentage").html(""),waitSpinner.show()},type:"POST",url:"{% url 'ajax-release-graph' %}",data:{relbranch:e,lang:a},success:function(e){waitSpinner.hide(),$("#grapharea").hide(),$("#localegraph").show(),$("#button-hide-locale-graph").show(),$("#localegraph").html(e),$("#span-graph-disclaimer").html("Percentage is calculated on messages. Accuracy largely depends upon branch mapping"),$("#span-legends").html("")}})}$(document).ready(function(){getWaitSpinner(),$("#button-combined").addClass("active"),$("#localegraph").hide(),$("#grapharea").hide(),$("#button-hide-locale-graph").hide(),$("#select-lang-name").selectpicker("hide"),$("#select-release-branch").val("{{ release_branch }}"),getUrlVars().locale&&$("#select-lang-name").selectpicker("show")&&$("#select-lang-name").val(getUrlVars().locale)&&$("#select-lang-name").selectpicker("refresh")&&$("#button-combined").removeClass("active")&&$("#button-detailed").removeClass("active")&&$("#button-lang-wise").addClass("active")&&$("#releasegraph").hide()&&ajax_one_lang(),$("#select-release-branch").change(function(e){window.location.replace("/releases/view/"+$(this).val())}),$("#select-lang-name").change(function(e){ajax_one_lang()}),$("#button-hide-locale-graph").on("click",function(e){return e.preventDefault(),$("#localegraph").hide(),$("#select-lang-name").selectpicker("val","Select Language"),$("#grapharea").show(),$("#span-graph-disclaimer").html("Consolidated graph of all packages being tracked for "+$("#select-release-branch").val()+" branch. Accuracy largely depends upon branch mapping"),!langWiseFlag&&ajax_lang_wise(),$(this).hide()}),$("#button-combined").on("click",function(){$("#button-detailed").removeClass("active"),$("#button-lang-wise").removeClass("active"),$("#button-combined").addClass("active"),$("#localegraph").hide(),$("#grapharea").hide(),$("#button-hide-locale-graph").hide(),$("#select-lang-name").selectpicker("hide"),$("#releasegraph").show(),ajax_combined()}),$("#button-detailed").on("click",function(){$("#button-combined").removeClass("active"),$("#button-lang-wise").removeClass("active"),$("#button-detailed").addClass("active"),$("#localegraph").hide(),$("#grapharea").hide(),$("#button-hide-locale-graph").hide(),$("#select-lang-name").selectpicker("hide"),$("#releasegraph").show(),ajax_detailed()}),$("#button-lang-wise").on("click",function(){$("#button-combined").removeClass("active"),$("#button-detailed").removeClass("active"),$("#button-lang-wise").addClass("active"),$("#releasegraph").hide(),ajax_lang_wise()}),ajax_combined()});
 </script>
 {% endblock %}
