--- a/dashboard/templates/stats/trans_status_package.html
+++ b/dashboard/templates/stats/trans_status_package.html
@@ -2,8 +2,8 @@
 {% load custom_tags %}
 
 {% block extrascript %}
-<script src="/static/js/jquery.flot.js"></script>
-<script src="/static/js/jquery.flot.tooltip.js"></script>
+<script src="/static/jquery.flot/jquery.flot.js"></script>
+<script src="/static/jquery.flot/jquery.flot.tooltip.js"></script>
 <script src="/static/js/waiting.dialog.js"></script>
 <script src="/static/js/csrf.js"></script>
 <style type="text/css">
