--- a/dashboard/templates/stats/trans_status_release.html
+++ b/dashboard/templates/stats/trans_status_release.html
@@ -1,9 +1,9 @@
 {% extends "stats/status_releases.html" %}
 
 {% block extrascript %}
-<script src="/static/js/jquery.flot.js"></script>
+<script src="/static/jquery.flot/jquery.flot.js"></script>
 <script src="/static/js/excanvas.min.js"></script>
-<script src="/static/js/jquery.flot.pie.js"></script>
+<script src="/static/jquery.flot/jquery.flot.pie.js"></script>
 <script src="/static/js/waiting.dialog.js"></script>
 <script src="/static/js/csrf.js"></script>
 <style type="text/css">
