--- a/dashboard/templates/graph_rules/graph_rule_new.html
+++ b/dashboard/templates/graph_rules/graph_rule_new.html
@@ -2,21 +2,7 @@
 {% block extrascript %}
 <script src="/static/bootstrap-select/js/bootstrap-select.js"></script>
 <script type="text/javascript">
-  function slugify(e) {
-    return e.toString().toLowerCase().replace(/\s+/g, "-").replace(/\-\-+/g, "-").replace(/\./g, "-").replace(/^-+/, "")
-    //.replace(/[^\w\-]+/g, "").replace(/-+$/, "")
-  }
-
-  function showRuleSlug() {
-    $("#id_rule_name").val(slugify($("#id_rule_name").val()))
-  }
-
-  $(document).ready(function () {
-    "pick" == $('input[name="lang_selection"]:checked').val() && $("#div_id_rule_langs").hide(), $("#lang_selection_id").on("change", function () {
-      var e = $('input[name="lang_selection"]:checked').val();
-      "pick" == e ? $("#div_id_rule_langs").hide() : "select" == e && $("#div_id_rule_langs").show()
-    })
-  });
+  function slugify(e){return e.toString().toLowerCase().replace(/\s+/g,"-").replace(/\-\-+/g,"-").replace(/\./g,"-").replace(/^-+/,"")}function showRuleSlug(){$("#id_rule_name").val(slugify($("#id_rule_name").val()))}$(document).ready(function(){"pick"==$('input[name="lang_selection"]:checked').val()&&$("#div_id_rule_langs").hide(),$("#lang_selection_id").on("change",function(){var e=$('input[name="lang_selection"]:checked').val();"pick"==e?$("#div_id_rule_langs").hide():"select"==e&&$("#div_id_rule_langs").show()})});
 </script>
 {% endblock %}
 {% block formtitle %}
@@ -27,11 +13,6 @@ Create a new graph rule
 {% endblock %}
 {% block formscript %}
 <script>
-  $(function () {
-    $('.selectpicker').selectpicker({
-      dropupAuto: false,
-      liveSearch: true,
-    });
-  });
+  $(function(){$(".selectpicker").selectpicker({dropupAuto:!1,liveSearch:!0})});
 </script>
 {% endblock %}
