--- a/dashboard/templates/graph_rules/graph_rule_view.html
+++ b/dashboard/templates/graph_rules/graph_rule_view.html
@@ -73,89 +73,7 @@
 </div>
 
 <script>
-  function getUrlVars() {
-    for (var a, e = [], t = window.location.href.slice(window.location.href.indexOf("?") + 1).split("&"), r = 0; r < t.length; r++) a = t[r].split("="), e.push(a[0]), e[a[0]] = a[1];
-    return e
-  }
-
-  function csrfSafeMethod(a) {
-    return /^(GET|HEAD|OPTIONS|TRACE)$/.test(a)
-  }
-
-  function get_coverage() {
-    return $.ajax({
-      beforeSend: function(a, e) {
-        csrfSafeMethod(e.type) || this.crossDomain || (csrftoken ? a.setRequestHeader("X-CSRFToken", csrftoken) : a.setRequestHeader("X-CSRFToken", "{{ csrf_token }}")), waitSpinner.show()
-      },
-      type: "POST",
-      url: "{% url 'ajax-graph-data' %}",
-      data: {
-        graph_rule: $("#select-graph-rule-name").val()
-      },
-      dataType: "json",
-      success: function(a) {
-        waitSpinner.hide();
-        var e = a.branch,
-          t = a.graph_data,
-          r = a.ticks,
-          n = {
-            series: {
-              stack: 0,
-              bars: {
-                show: !0,
-                barWidth: .4,
-                align: "center"
-              }
-            },
-            xaxis: {
-              axisLabel: "Packages",
-              axisLabelUseCanvas: !0,
-              axisLabelFontSizePixels: 12,
-              axisLabelFontFamily: "Verdana, Arial",
-              axisLabelPadding: 10,
-              ticks: r
-            },
-            yaxis: {
-              axisLabel: "Translation",
-              axisLabelUseCanvas: !0,
-              axisLabelFontSizePixels: 12,
-              axisLabelFontFamily: "Verdana, Arial",
-              axisLabelPadding: 3,
-              tickFormatter: function(a, e) {
-                return a + "%"
-              },
-              tickDecimals: 2
-            },
-            legend: {
-	      noColumns: Math.ceil(t.length / 6),
-              labelBoxBorderColor: "#000000",
-	      container: $("#div-legend-area")
-            },
-            grid: {
-              margin: 10,
-              hoverable: !0,
-              borderWidth: 2,
-              backgroundColor: {
-                colors: ["#ffffff", "#EDF5FF"]
-              }
-            },
-            tooltip: {
-              show: !0,
-              content: "%s | %y translated"
-            }
-          };
-        $.plot($("#div-graph-area"), t, n), $("#span-coverage-info").html($("#select-graph-rule-name").val() + ": Translation coverage of <span class='text-primary'>" + r.length + "</span> packages for <span class='text-primary'>" + e + "</span> release in <span class='text-primary'>" + t.length + "</span> languages."), $("#span-release-branch").html("Release [ " + e + " ]"), $("#p-graph-disclaimer").html("<span class='pull-right text-muted'>Graph is based on branch mapping. And %age is calculated on messages.</span>")
-      }
-    })
-  }
-  $(document).ready(function() {
-    getWaitSpinner();
-    getUrlVars().rule && $("#select-graph-rule-name").val(getUrlVars().rule) && get_coverage(), $("#select-graph-rule-name").change(function(a) {
-      get_coverage()
-    })
-  });
-
-      // TODO: expand this and make same changes to the above js script function getUrlVars(){for(var a,e=[],t=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),r=0;r<t.length;r++)a=t[r].split("="),e.push(a[0]),e[a[0]]=a[1];return e}function csrfSafeMethod(a){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(a)}function get_coverage(){return $.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitingDialog.show()},type:"POST",url:"/ajax/graph-data",data:{graph_rule:$("#ruleName").val()},dataType:"json",success:function(a){waitingDialog.hide();var e=a.branch,t=a.graph_data,r=a.ticks,n={series:{stack:0,bars:{show:!0,barWidth:.4,align:"center"}},xaxis:{axisLabel:"Packages",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:10,ticks:r},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:3,tickFormatter:function(a,e){return a+"%"},tickDecimals:2},legend:{noColumns:Math.ceil(t.length/6),labelBoxBorderColor:"#000000",container: $("#legendarea")},grid:{hoverable:!0,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:!0,content:"%s | %y translated"}};$.plot($("#grapharea"),t,n),$("#coverageinfo").html("Translation coverage of "+r.length+" packages for "+e+" release in "+t.length+" languages."),$("#relbranch").html("Release [ "+e+" ]"),$("#graphdisclaimer").html("<span class='pull-right text-muted'>Graph is based on branch mapping. And %age is calculated on messages.</span>")}})}$(document).ready(function(){$("#tab-translation-coverage").addClass("active"),getUrlVars().rule&&$("#ruleName").val(getUrlVars().rule)&&get_coverage(),$("#ruleName").change(function(a){get_coverage()})});
-
+  function getUrlVars(){for(var a,e=[],r=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),n=0;n<r.length;n++)a=r[n].split("="),e.push(a[0]),e[a[0]]=a[1];return e}function csrfSafeMethod(a){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(a)}function get_coverage(){return $.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitSpinner.show()},type:"POST",url:"{% url 'ajax-graph-data' %}",data:{graph_rule:$("#select-graph-rule-name").val()},dataType:"json",success:function(a){waitSpinner.hide();var e=a.branch,r=a.graph_data,n=a.ticks,s={series:{stack:0,bars:{show:!0,barWidth:.4,align:"center"}},xaxis:{axisLabel:"Packages",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:10,ticks:n},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:3,tickFormatter:function(a,e){return a+"%"},tickDecimals:2},legend:{noColumns:Math.ceil(r.length/6),labelBoxBorderColor:"#000000",container:$("#div-legend-area")},grid:{margin:10,hoverable:!0,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:!0,content:"%s | %y translated"}};$.plot($("#div-graph-area"),r,s),$("#span-coverage-info").html($("#select-graph-rule-name").val()+": Translation coverage of <span class='text-primary'>"+n.length+"</span> packages for <span class='text-primary'>"+e+"</span> release in <span class='text-primary'>"+r.length+"</span> languages."),$("#span-release-branch").html("Release [ "+e+" ]"),$("#p-graph-disclaimer").html("<span class='pull-right text-muted'>Graph is based on branch mapping. And %age is calculated on messages.</span>")}})}$(document).ready(function(){getWaitSpinner(),getUrlVars().rule&&$("#select-graph-rule-name").val(getUrlVars().rule)&&get_coverage(),$("#select-graph-rule-name").change(function(a){get_coverage()})});
+  // TODO: expand this and make same changes to the above js script function getUrlVars(){for(var a,e=[],t=window.location.href.slice(window.location.href.indexOf("?")+1).split("&"),r=0;r<t.length;r++)a=t[r].split("="),e.push(a[0]),e[a[0]]=a[1];return e}function csrfSafeMethod(a){return/^(GET|HEAD|OPTIONS|TRACE)$/.test(a)}function get_coverage(){return $.ajax({beforeSend:function(a,e){csrfSafeMethod(e.type)||this.crossDomain||(csrftoken?a.setRequestHeader("X-CSRFToken",csrftoken):a.setRequestHeader("X-CSRFToken","{{ csrf_token }}")),waitingDialog.show()},type:"POST",url:"/ajax/graph-data",data:{graph_rule:$("#ruleName").val()},dataType:"json",success:function(a){waitingDialog.hide();var e=a.branch,t=a.graph_data,r=a.ticks,n={series:{stack:0,bars:{show:!0,barWidth:.4,align:"center"}},xaxis:{axisLabel:"Packages",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:10,ticks:r},yaxis:{axisLabel:"Translation",axisLabelUseCanvas:!0,axisLabelFontSizePixels:12,axisLabelFontFamily:"Verdana, Arial",axisLabelPadding:3,tickFormatter:function(a,e){return a+"%"},tickDecimals:2},legend:{noColumns:Math.ceil(t.length/6),labelBoxBorderColor:"#000000",container: $("#legendarea")},grid:{hoverable:!0,borderWidth:2,backgroundColor:{colors:["#ffffff","#EDF5FF"]}},tooltip:{show:!0,content:"%s | %y translated"}};$.plot($("#grapharea"),t,n),$("#coverageinfo").html("Translation coverage of "+r.length+" packages for "+e+" release in "+t.length+" languages."),$("#relbranch").html("Release [ "+e+" ]"),$("#graphdisclaimer").html("<span class='pull-right text-muted'>Graph is based on branch mapping. And %age is calculated on messages.</span>")}})}$(document).ready(function(){$("#tab-translation-coverage").addClass("active"),getUrlVars().rule&&$("#ruleName").val(getUrlVars().rule)&&get_coverage(),$("#ruleName").change(function(a){get_coverage()})});
 </script>
 {% endblock %}
